Reworked the way the found traces are visualised (using Salix)

--- a/salix/tracevis.html
+++ b/salix/tracevis.html
@@ -8,14 +8,14 @@
 <script src="../lib/salix-smcat.js"></script>
 
 <script>
-  var salix = new Salix();
+  var salix = new Salix("rebelTraceVis");
   registerSMCat(salix);
   $(document).ready(salix.start); 
 </script>
 <body>
 
 <div class="container">
-  <div id="root">
+  <div id="rebelTraceVis">
   </div>
 </div>
 
