--- a/salix/tracevis.html
+++ b/salix/tracevis.html
@@ -7,6 +7,13 @@
 <script src="../lib/smcat.bundle.js"></script>
 <script src="../lib/salix-smcat.js"></script>
 
+<style>
+  .container {
+    margin: 0 auto;
+    width: 100%;
+  }
+</style>
+
 <script>
   var salix = new Salix("rebelTraceVis");
   registerSMCat(salix);
